# KatanaUsdPlugins

./: .arcconfig  .arclint  .clang-format  .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  NOTICE.txt  README.md  _config.toml  _config.yaml
.github/workflows/: ci.yml
cmake/: build-utils.cmake
cmake/macros/: PxrUsdUtils.cmake  SetupInterfaces.cmake  Support.cmake  UsdUtils.cmake  compilePython.py
cmake/modules/: FindKatanaAPI.cmake  FindTBB.cmake  FindUSD.cmake
lib/: CMakeLists.txt
lib/katanaAttrfncApi/: CMakeLists.txt
lib/katanaOpApi/: CMakeLists.txt
lib/katanaPluginApi/: CMakeLists.txt  FnAsset.h  FnAttributeModifier.h  FnScenegraphGenerator.h  FnViewerModifier.h  FnViewerModifierInput.h  ScenegraphLocationDelegate.h
lib/usdKatana/: CMakeLists.txt  __init__.py  api.h  attrMap.cpp  attrMap.h  baseMaterialHelpers.cpp  baseMaterialHelpers.h  blindDataObject.cpp  blindDataObject.h  bootstrap.cpp  bootstrap.h  cache.cpp  cache.h  childMaterialAPI.cpp  childMaterialAPI.h  debugCodes.cpp  debugCodes.h  generatedSchema.usda  katanaLightAPI.cpp  katanaLightAPI.h  lightAPI.cpp  lightAPI.h  locks.cpp  locks.h  lookAPI.cpp  lookAPI.h  module.cpp  overview.dox  plugInfo.json  readBasisCurves.cpp  readBasisCurves.h  readBlindData.cpp  readBlindData.h  readCamera.cpp  readCamera.h  readConstraintTarget.cpp  readConstraintTarget.h  readGeomSubset.cpp  readGeomSubset.h  readGprim.cpp  (+45 more)
lib/usdKatana/test/: empty.glslfx  light1.usda  light2.usda  light3.usda  light4.usda  lightfilter1.usda  main.cpp  readLightFilterTest.cpp  readLightTest.cpp  shaderDefs.usda
lib/usdKatanaSchemas/: CMakeLists.txt  generatedSchema.usda  plugInfo.json  schema.usda
lib/vtKatana/: CMakeLists.txt  api.h  array.cpp  array.h  bootstrap.cpp  bootstrap.h  internalFromVt.h  internalToVt.h  internalTraits.cpp  internalTraits.h  traits.cpp  traits.h  value.cpp  value.h
plugin/: CMakeLists.txt
plugin/pxrUsdIn/: CMakeLists.txt  pxrUsdIn.cpp
plugin/pxrUsdInPrman/: CMakeLists.txt  declarePackageOps.h  prmanGeometryDecorator.cpp  prmanLightDecorator.cpp  register.cpp
plugin/pxrUsdInShipped/: CMakeLists.txt  attrfnc_materialReference.cpp  attrfnc_materialReference.h  basisCurves.cpp  camera.cpp  constraints.cpp  declareCoreOps.h  geomSubset.cpp  light.cpp  lightFilter.cpp  material.cpp  materialsGroup.cpp  mesh.cpp  model.cpp  nurbsPatch.cpp  pointInstancer.cpp  points.cpp  register.cpp  scope.cpp  uiUtils.cpp  xform.cpp
plugin/pxrUsdInShipped/testenv/Basic/: camera.attrs  faceset0.attrs  faceset1.attrs  look.attrs  mesh.attrs  model.attrs  plane.attrs  testPxrUsdInShippedBasic.py  xform.attrs
plugin/pxrUsdInShipped/testenv/PointInstancer/: testPxrUsdInShippedPointInstancer.py
plugin/pxrUsdInShipped/testenv/PointInstancer/oss/: baseline.motion.xml  baseline.translateOnly.xml
plugin/usdIn/: CMakeLists.txt  overview.dox  usdIn.cpp
plugin/usdInPrman/: CMakeLists.txt  declarePackageOps.h  prmanGeometryDecorator.cpp  prmanLightDecorator.cpp  register.cpp
plugin/usdInShipped/: CMakeLists.txt  attrfnc_materialReference.cpp  basisCurves.cpp  camera.cpp  constraints.cpp  declareCoreOps.h  geomSubset.cpp  light.cpp  lightFilter.cpp  material.cpp  materialsGroup.cpp  mesh.cpp  model.cpp  nurbsPatch.cpp  openVDBAsset.cpp  pointInstancer.cpp  points.cpp  primitive.cpp  register.cpp  resolveMaterialBindings.cpp  scope.cpp  uiUtils.cpp  volume.cpp  xform.cpp
plugin/usdRenderInfoPlugin/: CMakeLists.txt  UsdRenderInfoPlugin.cpp  UsdRenderInfoPlugin.h  main.cpp
plugin/usdRenderInfoPlugin/Shaders/: CMakeLists.txt  UsdLuxCylinderLight.args  UsdLuxDiskLight.args  UsdLuxDistantLight.args  UsdLuxDomeLight.args  UsdLuxGeometryLight.args  UsdLuxRectLight.args  UsdLuxSphereLight.args
plugin/vmp_usd/: CMakeLists.txt  debugCodes.cpp  debugCodes.h  usdVMP.cpp  usdVMP.h
python/: CMakeLists.txt
python/nodetypes/: CMakeLists.txt  PxrUsdIn.py  UsdIn.py
python/test/: CMakeLists.txt  __init__.py  usdExportShippedPlugin_test.py  usdLuxExport_test.py
python/usdExport/: CMakeLists.txt  usdExport.py
python/usdExport/SuperTools/: CMakeLists.txt
python/usdExport/SuperTools/UsdMaterialBake/: Editor.py  Node.py  VariantsWidget.py  __init__.py
python/usdExport/UsdExport/: __init__.py  common.py  light.py  lightLinking.py  material.py  pluginAPI.py  pluginRegistry.py  prmanStatements.py  transform.py  typeConversionMaps.py
python/usdExport/UsdExportPlugins/: CMakeLists.txt  KatanaLightAPIUsdExportPlugin.py  SdrLightUsdExportPlugin.py
